fix some alignment

--- a/frontend/src/components/dashboard/dashboard.scss
+++ b/frontend/src/components/dashboard/dashboard.scss
@@ -18,6 +18,7 @@ div#dashboardMain{
 		justify-content: flex-start;
 		max-width: 1100px;
 		padding: 80px;
+		align-self: center;
 		div.dashboardImages{
 			display: flex;
 			flex-flow: row wrap;
