--- a/frontend/src/components/tag_create/tag_create.scss
+++ b/frontend/src/components/tag_create/tag_create.scss
@@ -34,6 +34,7 @@ span{
 }
 input.tag{
 	margin: 0 $tagMargin;
+	flex: 1;
 }
 .tag{
 	background-color: transparent;
